# AgentOrchestration

./: .gitignore  Makefile  README.md  batch_submit_all.py  close_batch_prs.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  executor.py  registry.py  runtime.py  sandbox.py
src/api/: __init__.py  auth_service.py  middleware.py  routes.py  server.py
src/auth/: __init__.py  jwt.py
src/cli/: __init__.py  main.py
src/common/: config.py  errors.py  logging.py  metrics.py  migration.py  report_cache.py
src/middleware/: __init__.py  audit.py  auth.py  path_normalization.py  role_enforcement.py
src/orchestrator/: __init__.py  engine.py  scheduler.py  workflow.py  yaml_loader.py
src/sdk/: __init__.py  agent.py  client.py  decorators.py
tests/: __init__.py  test_agent_registry.py  test_audit_middleware.py  test_auth.py  test_auth_and_monitor.py  test_body_size.py  test_bounty_1023.py  test_bounty_1040.py  test_bounty_1079.py  test_bounty_1090.py  test_bounty_1106.py  test_bounty_1128.py  test_bounty_1618.py  test_bounty_494.py  test_bounty_518.py  test_bounty_545.py  test_bounty_552.py  test_bounty_570.py  test_bounty_580.py  test_bounty_590.py  test_bounty_597.py  test_bounty_658.py  test_bounty_725.py  test_bounty_760.py  test_bounty_764.py  test_bounty_781.py  test_bounty_800.py  test_bounty_841.py  test_bounty_865.py  test_bounty_886.py  test_bounty_891.py  test_bounty_950.py  test_bounty_969.py  test_bounty_982.py  test_config.py  test_env_coercion.py  test_gauge_validation.py  test_jitter_retry.py  test_jwt_audience.py  test_list_agents_limit.py  (+14 more)
tests/fixtures/migrations/: 2026_05_19_initial.sql  2026_05_20_drop_old_column.sql  2026_05_21_002_create_task_index.sql  (+1 more)
